Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ jobs:
 ###### BuildReactApp #####################################################################################################################################
 
 - job: BuildReactApp
-  displayName: builds and creates a docker image
+  displayName: builds and creates a docker image of the react application
   dependsOn: Dockerize
 
   steps:
