--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,8 +29,27 @@ http {
         listen 80 default_server;
         server_name ams.norwayeast.cloudapp.azure.com;
 
+        #location / {
+        #    return 301 https://$host$request_uri;
+        #}
+
         location / {
-            return 301 https://$host$request_uri;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /api {
+            proxy_pass http://ams-backend:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Retry mechanism
+            proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+            proxy_connect_timeout 2s;
+            proxy_read_timeout 5s;
         }
 
         location ~ /.well-known/acme-challenge/ {
