Changed url for ssl

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,11 +27,28 @@ http {
 
     server {
         listen 80 default_server;
-        server_name ams.norwayeast.cloudapp.azure.com;
+        server_name mngsys.norwayeast.cloudapp.azure.com;
 
-        #location / {
-        #    return 301 https://$host$request_uri;
-        #}
+        location / {
+            return 301 https://$host$request_uri;
+        }
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+            allow all;
+        }
+    }
+
+    server {
+        listen 443 ssl default_server;
+        server_name mngsys.norwayeast.cloudapp.azure.com;
+
+        ssl_certificate /etc/letsencrypt/live/mngsys.norwayeast.cloudapp.azure.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/mngsys.norwayeast.cloudapp.azure.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
 
         location / {
             root /usr/share/nginx/html;
@@ -52,52 +69,16 @@ http {
             proxy_read_timeout 5s;
         }
 
-        location ~ /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-            allow all;
+        error_page 404 /404.html;
+        location = /404.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+            internal;
         }
     }
-
-    #server {
-    #    listen 443 ssl default_server;
-    #    server_name ams.norwayeast.cloudapp.azure.com;
-#
-    #    ssl_certificate /etc/letsencrypt/live/ams.norwayeast.cloudapp.azure.com/fullchain.pem;
-    #    ssl_certificate_key /etc/letsencrypt/live/ams.norwayeast.cloudapp.azure.com/privkey.pem;
-#
-    #    ssl_protocols TLSv1.2 TLSv1.3;
-    #    ssl_prefer_server_ciphers on;
-    #    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-#
-    #    location / {
-    #        root /usr/share/nginx/html;
-    #        index index.html index.htm;
-    #        try_files $uri $uri/ /index.html;
-    #    }
-#
-    #    location /api {
-    #        proxy_pass http://ams-backend:8080;
-    #        proxy_set_header Host $host;
-    #        proxy_set_header X-Real-IP $remote_addr;
-    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #        proxy_set_header X-Forwarded-Proto $scheme;
-#
-    #        # Retry mechanism
-    #        proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
-    #        proxy_connect_timeout 2s;
-    #        proxy_read_timeout 5s;
-    #    }
-#
-    #    error_page 404 /404.html;
-    #    location = /404.html {
-    #        root /usr/share/nginx/html;
-    #        internal;
-    #    }
-#
-    #    error_page 500 502 503 504 /50x.html;
-    #    location = /50x.html {
-    #        root /usr/share/nginx/html;
-    #        internal;
-    #    }
-    #}
 }
