--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,7 @@ jobs:
 ###### InstallNewmanAndRunPostmanTests #################################################################################################################
 
 - job: InstallNewmanAndRunPostmanTests
-  dependsOn: DockerizeSpringBoot
+  dependsOn: Dockerize
   displayName: 'Execute Postman Tests'
   steps:
   - task: NodeTool@0
@@ -101,7 +101,7 @@ jobs:
 
 - job: BuildReactApp
   displayName: builds and creates a docker image of the react application
-  dependsOn: Dockerize
+  dependsOn: InstallNewmanAndRunPostmanTests
 
   steps:
   - checkout: none
