--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
   steps:
 
   - script: |
-      docker run --name ams-db -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root --network ams-network mysql:latest
+      docker run --name -d ams-db -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root --network ams-network mysql:latest
     displayName: create database
 
   # Tests and then builds the maven project.
