Update azure-CI-pipeline.yml for Azure Pipelines

--- a/azure-CI-pipeline.yml
+++ b/azure-CI-pipeline.yml
@@ -1,15 +1,11 @@
 trigger:
-- main
+- dev
 
 pool:
   name: Localhost
   demands:
     - maven
     - docker
-
-variables:
-  - group: test
-
 
 jobs:
 
