Update azure-CI-pipeline.yml for Azure Pipelines

--- a/azure-CI-pipeline.yml
+++ b/azure-CI-pipeline.yml
@@ -81,6 +81,14 @@ jobs:
       --reporter-htmlextra-export "$(Build.SourcesDirectory)\TestResults\testResults.html"
     displayName: 'Run Newman with Postman Collection for Reports'
 
+###### PublishPostmanTest #############################################################################################################################
+
+- job: PublishPostmanTest
+  displayName: Publish test
+  dependsOn: InstallNewmanAndRunPostmanTests
+  condition: always()
+
+  steps:
   - task: PublishTestResults@2
     inputs:
       testResultsFormat: 'JUnit'
