JWT env variable

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-JWT_SECRET_KEY=${JWT_SECRET_KEY}
+JWT_SECRET_KEY=${JWTSECRET}
